<resources>
    <string name="app_name">GOGOGO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">confirmPassword</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="teleno">Teleno</string>
    <string name="email">Email</string>
    <string name="username_description">用户名：</string>
    <string name="password_description">密码：</string>
    <string name="confirmPassword_description">确认密码：</string>
    <string name="age_description">年龄：</string>
    <string name="gender_description">性别：</string>
    <string name="teleno_description">电话：</string>
    <string name="email_description">邮箱：</string>

    <string name="login">Sign in</string>
    <string name="register">Sign up</string>
    <string name="SaveChangeUserInfo">Save</string>

    <string name="welcome">Welcome </string>
    <string name="registerTIme">注册时间 </string>

    <string name="changeUserInfo">修改信息</string>
    <string name="getData">Get it!</string>
</resources>