<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeUserInfo">


    <TextView
        android:id="@+id/textUsername"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:text="@string/username_description"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:height="40sp"
        android:autofillHints=""
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="@color/colorInput"
        android:textColorHint="@color/colorHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textUsername"
        tools:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:text="@string/password_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:height="40sp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorInput"
        android:textColorHint="@color/colorHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textPassword" />

    <TextView
        android:id="@+id/textAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:text="@string/age_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword" />

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:height="40sp"
        android:autofillHints=""
        android:hint="@string/age"
        android:inputType="text"
        android:textColor="@color/colorInput"
        android:textColorHint="@color/colorHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textAge" />

    <TextView
        android:id="@+id/textGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="15dp"
        android:text="@string/gender_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/age" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:src="@drawable/boy"
        app:layout_constraintEnd_toStartOf="@+id/gender"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <Switch
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/textGender"
        app:layout_constraintTop_toBottomOf="@id/age" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="9dp"
        android:src="@drawable/girl"
        app:layout_constraintStart_toEndOf="@+id/gender"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <TextView
        android:id="@+id/textTeleno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:text="@string/teleno_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender" />

    <EditText
        android:id="@+id/teleno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:height="40sp"
        android:autofillHints=""
        android:hint="@string/teleno"
        android:inputType="numberDecimal"
        android:textColor="@color/colorInput"
        android:textColorHint="@color/colorHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textTeleno" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:text="@string/email_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/teleno" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:height="40sp"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorInput"
        android:textColorHint="@color/colorHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textEmail" />


    <Button
        android:id="@+id/register"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:onClick="onClickChangeUserInfo"
        android:text="@string/SaveChangeUserInfo"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/registerTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="10dp"
        android:text="@string/registerTIme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/textConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:text="@string/confirmPassword_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:height="40sp"
        android:autofillHints=""
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:textColor="@color/colorInput"
        android:textColorHint="@color/colorHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textConfirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>